# scripts

./: .gitignore  CLAUDE.md  ISSUE-node-pm-selection.md  README.ar.md  README.en.md  README.es.md  README.fr.md  README.md  README.ru.md  pyproject.toml
.github/workflows/: deploy-docs.yml
.skein/: .gitignore  config.yaml
.skein/spec/backend/: batch-git.md
.skein/spec/guides/: index.md  trellisx-worktree.md
.trellis/: .gitignore  .template-hashes.json  config.yaml  task.md  workflow.md
.trellis/scripts/: trellisx-cleanup.py  trellisx-finish.py  trellisx-packages.py  trellisx-taskmd.py  trellisx-worktree.py  trellisx_wt.py
.trellis/spec/backend/: batch-git.md  index.md
.trellis/tasks/07-06-parallel-batch/: prd.md  (+1 more)
docs/: i18n.json  package-lock.json  package.json  rspress.config.ts  tsconfig.json
lib/: __init__.py  ai_workflow.py  batch_git.py  build.py  commit_wf.py  cpd.py  cpd_core.py  exec.py  git.py  git_workflow.py  issue_wf.py  loop.py  mr_wf.py  notify.py  prc_wf.py  process.py  project.py  squash_pr_wf.py  system.py  ui.py
tests/: .perf_probe_tmp  test_ai_workflow.py  test_batch_git.py  test_build.py  test_checkwork.py  test_commit_wf.py  test_cpd.py  test_cpd_core.py  test_exec.py  test_fetch_all.py  test_find_git_repos.py  test_git_fetch_all.py  test_git_workflow.py  test_gitwf_dispatch.py  test_issue_wf.py  test_kk.py  test_kkp.py  test_list_branch.py  test_list_branches.py  test_loop.py  test_mr.py  test_mr_wf.py  test_n.py  test_notify.py  test_prc_wf.py  test_project.py  test_shells_blackbox.py  test_squash_pr.py  test_ui.py  test_unsleep.py
(+123 files in other folders)
